@@ -151,7 +151,7 @@ final class VfsBtrfsFileSystem extends VfsReadOnlyFileSystem<DirEntry, File, Dir
         } else if (dirEntry.getType() == DirItemChildType.RegularFile) {
             return new File(dirEntry, getContext());
         } else {
-            throw new IllegalArgumentException(String.format("Type %s is not supported in btrfs", dirEntry.getType()));
+            throw new IllegalArgumentException("Type %s is not supported in btrfs".formatted(dirEntry.getType()));
         }
     }
 
